adding index home page fixed

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -9,8 +9,8 @@
             {% for entry in videoEntries %}
                 <div class="index-card">
                     {% set images = entry.pageEntyImage %}
-                    <a href="{{ entry.url }}" style=" background-image: url('{% for img in images %}{{ img.getUrl() }}{% endfor %}'); background-position: center; background-repeat: no-repeat; background-size: cover; height: 40vh; width: 100%;">
-
+{#                    <a href="{{ entry.url }}" style=" background-image: url('{% for img in images %}{{ img.getUrl() }}{% endfor %}'); background-position: center; background-repeat: no-repeat; background-size: cover; height: 40vh; width: 100%;">#}
+                    <img src="{% for img in images %}{{ img.getUrl() }}{% endfor %}" alt="" class="img-fluid">
                     {% set categories = entry.category %}
                     {% if categories|length %}
                         {% for rel in categories %}
