--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -52,6 +52,7 @@
 .index-card {
   //width: 90%;
   width: 100%;
+  //width: 800px;
   margin: 2rem auto;
   display: flex;
   flex-direction: column;
