--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Take a Closer look Ministries">
-    <meta property="og:title" content="Take a Closer look Ministries">
-    <meta property="og:description" content="Take a Closer look Ministries">
-    <meta property="og:image" content="https://www.mywebsite.com/image.jpg">
-    <meta property="og:image:alt" content="Take a Closer look Ministries Image">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="Take a Closer look Ministries">
-    <meta property="og:url" content="https://www.mywebsite.com/page">
-    <link rel="canonical" href="https://www.mywebsite.com/page">
+
+
+{#    <meta name="description" content="Take a Closer look Ministries">#}
+{#    <meta property="og:title" content="Take a Closer look Ministries">#}
+{#    <meta property="og:description" content="Take a Closer look Ministries">#}
+{#    <meta property="og:image" content="https://www.mywebsite.com/image.jpg">#}
+{#    <meta property="og:image:alt" content="Take a Closer look Ministries Image">#}
+{#    <meta property="og:locale" content="en_US">#}
+{#    <meta property="og:type" content="website">#}
+{#    <meta name="twitter:card" content="Take a Closer look Ministries">#}
+{#    <meta property="og:url" content="https://www.mywebsite.com/page">#}
+{#    <link rel="canonical" href="https://www.mywebsite.com/page">#}
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
